<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">surveyApp</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login ID</string>
    <string name="password">Password</string>
    <string name="submit">submit</string>
    <string name="no_tasks">No Open Survey\nFor You!!</string>
    <string name="remove_completed">Remove</string>
    <string name="surveys">Surveys</string>
    <string name="unsaved_changes_title">Thank You! For Taking This Survey </string>
    <string name="unsaved_changes_message">Are you sure you want to submit this survey now?</string>
    <string name="discard_changes">Discard</string>

</resources>